[gd_scene load_steps=12 format=3 uid="uid://dndpxufhapxen"]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_x30gv"]
[ext_resource type="FontFile" uid="uid://bxfrdveuo38na" path="res://assets/fonts/crang/Crang.ttf" id="2_h3654"]
[ext_resource type="Texture2D" uid="uid://dslgnhcf0pf77" path="res://assets/portraits/brawler-girl.png" id="3_d3ubh"]
[ext_resource type="Texture2D" uid="uid://43vx4vkyisix" path="res://assets/portraits/enemy-punk.png" id="4_yhe04"]
[ext_resource type="Texture2D" uid="uid://dgmo5m0oq6r31" path="res://assets/sprites/items/go.png" id="5_jyxh4"]
[ext_resource type="AudioStream" uid="uid://c1x6ri5umm2b4" path="res://assets/sound/level_clear.mp3" id="6_88prp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lpki2"]
bg_color = Color(0.884516, 0.42812, 0.581192, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c7kki"]
bg_color = Color(0.285746, 0.681028, 0.580107, 1)

[sub_resource type="Animation" id="Animation_gsfwr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Go:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_t1yq0"]
resource_name = "go"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Go:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0ltub"]
_data = {
"RESET": SubResource("Animation_gsfwr"),
"go": SubResource("Animation_t1yq0")
}

[node name="HUD" type="CanvasLayer"]
layer = 0
script = ExtResource("1_x30gv")

[node name="Go" type="TextureRect" parent="."]
visible = false
offset_left = 863.0
offset_top = 39.0
offset_right = 895.0
offset_bottom = 55.0
scale = Vector2(6, 6)
texture = ExtResource("5_jyxh4")
stretch_mode = 4

[node name="UIGameplay" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="HUDPlayer" type="Control" parent="UIGameplay"]
layout_mode = 3
anchors_preset = 0
offset_left = 40.0
offset_top = 30.0
offset_right = 401.0
offset_bottom = 109.0

[node name="NamePlayer" type="Label" parent="UIGameplay/HUDPlayer"]
layout_mode = 0
offset_left = 80.0
offset_top = 42.0
offset_right = 349.0
offset_bottom = 67.0
theme_override_fonts/font = ExtResource("2_h3654")
theme_override_font_sizes/font_size = 24
text = "PLAYER"

[node name="HealthPlayer" type="ProgressBar" parent="UIGameplay/HUDPlayer"]
layout_mode = 0
offset_left = 79.0
offset_top = 6.0
offset_right = 349.0
offset_bottom = 33.0
theme_override_styles/background = SubResource("StyleBoxFlat_lpki2")
theme_override_styles/fill = SubResource("StyleBoxFlat_c7kki")
value = 100.0

[node name="PortraitPlayer" type="TextureRect" parent="UIGameplay/HUDPlayer"]
layout_mode = 0
offset_left = -1.0
offset_top = -6.0
offset_right = 15.0
offset_bottom = 10.0
scale = Vector2(4.69485, 4.69485)
texture = ExtResource("3_d3ubh")

[node name="HUDEnemy" type="Control" parent="UIGameplay"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 640.0
offset_top = 30.0
offset_right = 1065.0
offset_bottom = 115.0

[node name="NameEnemy" type="Label" parent="UIGameplay/HUDEnemy"]
layout_mode = 0
offset_left = 64.0
offset_top = 42.0
offset_right = 333.0
offset_bottom = 67.0
theme_override_fonts/font = ExtResource("2_h3654")
theme_override_font_sizes/font_size = 24
text = "PLAYER"
horizontal_alignment = 2

[node name="HealthEnemy" type="ProgressBar" parent="UIGameplay/HUDEnemy"]
layout_mode = 0
offset_left = 61.0
offset_top = 6.0
offset_right = 331.0
offset_bottom = 33.0
theme_override_styles/background = SubResource("StyleBoxFlat_lpki2")
theme_override_styles/fill = SubResource("StyleBoxFlat_c7kki")
value = 100.0
fill_mode = 1

[node name="PortraitEnemy" type="TextureRect" parent="UIGameplay/HUDEnemy"]
layout_mode = 0
offset_left = 344.0
offset_top = -6.0
offset_right = 360.0
offset_bottom = 10.0
scale = Vector2(4.69485, 4.69485)
texture = ExtResource("4_yhe04")

[node name="HUDLevelCleared" type="Control" parent="UIGameplay"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="UIGameplay/HUDLevelCleared"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.627451)

[node name="Label" type="Label" parent="UIGameplay/HUDLevelCleared"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -294.0
offset_top = -132.0
offset_right = 294.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_h3654")
theme_override_font_sizes/font_size = 80
text = "Level Cleared"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="LevelClearedJingle" type="AudioStreamPlayer" parent="UIGameplay/HUDLevelCleared"]
stream = ExtResource("6_88prp")

[node name="TimerEnemyUI" type="Timer" parent="."]
wait_time = 2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0ltub")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
